--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FoodTrack</title>
-  <link rel="icon" href="../assets/logo.png" />
+  <link rel="icon" href="%PUBLIC_URL%/assets/logo.png" />
 </head>
 <body>
   <div id="root"></div>
